AM_CFLAGS = -I$(srcdir)/../include -pthread
AM_LDFLAGS = -L$(srcdir)/../lib
bin_PROGRAMS = tlstunnel testcli testsrv
dist_bin_SCRIPTS = set_disclose set_localid get_localid
tlstunnel_SOURCES = tlstunnel.c
tlstunnel_LDADD = ../lib/libstarttls.la
testcli_SOURCES = testcli.c
testcli_LDADD = ../lib/libstarttls.la
testsrv_SOURCES = testsrv.c
testsrv_LDADD = ../lib/libstarttls.la
