AM_CFLAGS = -I$(srcdir)/../include -pthread
AM_LDFLAGS = -L$(srcdir)/../lib
bin_PROGRAMS = tlstunnel testcli testsrv
dist_bin_SCRIPTS = set_disclose set_localid get_localid
tlstunnel_SOURCES = tlstunnel.c tlstunnel-chat.c
tlstunnel_LDADD = ../lib/libtlspool.la
testcli_SOURCES = testcli.c
testcli_LDADD = ../lib/libtlspool.la
testsrv_SOURCES = testsrv.c
testsrv_LDADD = ../lib/libtlspool.la
