AM_CFLAGS = $(P11KIT_CFLAGS) -I$(srcdir)/../include -pthread -DCONFIG_PARSE_ONLY -DDONAI_ONLY_TEXTPROC
AM_LDFLAGS = -L$(srcdir)/../lib
bin_PROGRAMS = tlstunnel testcli testsrv testpeer pingpool lidsel pinentry get_localid set_localid get_disclose set_disclose pgp11_genkey
tlstunnel_SOURCES = tlstunnel.c tlstunnel-chat.c
tlstunnel_LDADD = ../lib/libtlspool.la
testcli_SOURCES = testcli.c
testcli_LDADD = ../lib/libtlspool.la
testsrv_SOURCES = testsrv.c
testsrv_LDADD = ../lib/libtlspool.la
testpeer_SOURCES = testpeer.c
testpeer_LDADD = ../lib/libtlspool.la
pingpool_SOURCES = pingpool.c
pingpool_LDADD = ../lib/libtlspool.la
lidsel_SOURCES = lidsel.c
lidsel_LDADD = ../lib/libtlspool.la
pinentry_SOURCES = pinentry.c
pinentry_LDADD = ../lib/libtlspool.la
get_localid_SOURCES = get_localid.c ../src/config.c
get_localid_LDADD = $(BDB_LIBS)
set_localid_SOURCES = set_localid.c ../src/config.c
set_localid_LDADD = $(BDB_LIBS)
get_disclose_SOURCES = get_disclose.c ../src/config.c ../src/donai.c
get_disclose_LDADD = $(BDB_LIBS)
set_disclose_SOURCES = set_disclose.c ../src/config.c
set_disclose_LDADD = $(BDB_LIBS)
pgp11_genkey_SOURCES = pgp11_genkey.c
pgp11_genkey_LDADD = $(P11KIT_LIBS) -lcrypto
